...
            color = MaterialTheme.colorScheme.onSurface,
        )
    }
}

const val RIGHT_DRAWER_SEARCH_TAG = "right_drawer_search"
const val RIGHT_DRAWER_CATEGORIES_TAG = "right_drawer_categories"
const val RIGHT_DRAWER_ACCOUNTS_TAG = "right_drawer_accounts"
const val RIGHT_DRAWER_FINANCIAL_GOALS_TAG = "right_drawer_financial_goals"
const val RIGHT_DRAWER_CURRENCIES_TAG = "right_drawer_currencies"
const val RIGHT_DRAWER_SETTINGS_TAG = "right_drawer_settings"
const val RIGHT_DRAWER_SUPPORT_TAG = "right_drawer_support"

